--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//Spring Data
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	//Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
+	//Spring Web
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	//Lombok (Compile Only)
+	compileOnly 'org.projectlombok:lombok:1.18.34'
+	annotationProcessor 'org.projectlombok:lombok:1.18.34'
 }
 
 tasks.named('test') {
