feature/YPBS-250-login Secret auth properties oluşturuldu. Response olarak gönderilmesi kodlandı.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+auth.secret=sa<ldbgp<gf4aFsAHfDSsFGG55G6SDGSFG21S5DF5SAdfhSFHSSAsfhsxvc31
