--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-auth.secret=sa<ldbgp<gf4aFsAHfDSsFGG55G6SDGSFG21S5DF5SAdfhSFHSSAsfhsxvc31
+server.servlet.session.timeout=60m
+server.servlet.session.cookie.max-age=720m
