YPBS-313 Custom datalar oluşturuldu, triggerlar eklendi.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.session.timeout=60m
 server.servlet.session.cookie.max-age=720m
+spring.sql.init.data-locations=classpath:data.sql
